# hypercircuit

./: CAPABILITY_MATRIX.md  Cargo.toml  PERFORMANCE.md  README.md
benches/: mna.rs  routing.rs
examples/: ac_sweep.rs  advanced_routing.rs  analytic_sources.rs  auto_schematic.rs  curved_fabrication.rs  declarative_board.rs  diode_transient.rs  fluent_design.rs  hierarchical_schematic.rs  kicad_library_import.rs  kicad_roundtrip.rs  kicad_schematic.rs  kicad_stackup_rules.rs  layout_module.rs  lceda_pro_export.rs  mosfet_dc.rs  multipart_symbol.rs  nonlinear_ac.rs  parameterized_module.rs  part_library.rs  phase_tuning.rs  reusable_parts.rs  review_bundle.rs  semantic_edit.rs  source_diagnostics.rs  transient_run.rs  tscircuit_router_handoff.rs
src/: ac.rs  adapter.rs  assembly.rs  authoring.rs  autoroute.rs  coupling.rs  drc.rs  edit.rs  erc.rs  error.rs  fabrication.rs  hierarchy.rs  identity.rs  interchange.rs  kicad.rs  kicad_import.rs  kicad_library.rs  kicad_schematic.rs  layout.rs  layout_module.rs  lceda.rs  legacy_csgrs.rs  lib.rs  materialize.rs  mna.rs  model.rs  mosfet.rs  nonlinear.rs  package.rs  placement.rs  preview.rs  project.rs  project_manifest.rs  route_constraints.rs  routing.rs  schematic.rs  schematic_auto.rs  sexp.rs  simulation.rs  stitching.rs  (+2 more)
tests/: ac.rs  authoring.rs  autoroute.rs  cli.rs  curved_outline.rs  curved_routing.rs  declarative.rs  dispatch_trace.rs  edit.rs  erc.rs  fabrication.rs  hierarchy.rs  interchange.rs  kicad_library.rs  kicad_schematic.rs  layout.rs  layout_module.rs  lceda.rs  legacy_csgrs.rs  materialize.rs  mna.rs  mosfet.rs  nonlinear.rs  package.rs  placement.rs  preview.rs  project.rs  project_manifest.rs  release_workflow.rs  routing_corpus.rs  schematic.rs  schematic_auto.rs  simulation.rs  stitching.rs  workflow.rs
tests/support/: routing_corpus.rs
