[package]
name = "hypercircuit"
version = "0.3.0"
edition = "2024"
description = "Exact-aware circuit MNA carriers and adapter reports for the Hyper ecosystem"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/timschmidt/hypercircuit"
keywords = ["circuits", "mna", "simulation", "hyperreal", "electronics"]
categories = ["science", "simulation", "mathematics"]

[features]
default = []
dispatch-trace = ["hyperreal/dispatch-trace"]

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hyperreal = { path = "../hyperreal" }
hypersolve = { path = "../hypersolve" }
# hyperreal = { version = "0.13.0" }
# hypersolve = { version = "0.3.0" }
[dev-dependencies]
proptest = "1.7.0"

[[bench]]
name = "mna"
harness = false
